# panote

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  panote.jks  playwright.config.ts  vite.config.js
e2e/: mock.ts  multiselect.spec.ts  note-editor.spec.ts  notes-list.spec.ts  sidebar.spec.ts  transfer.spec.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/crypto/: keystore.rs  mod.rs  note.rs  tls.rs  vault.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_transfer.sql  0003_recovery.sql  0004_device_key.sql  0005_device_key_blob.sql  0006_transfer_history.sql  0007_device_settings.sql  0008_content_hint.sql  0009_note_extras.sql  0010_note_origin.sql
src-tauri/src/notes/: commands.rs  export.rs  mod.rs  types.rs
src-tauri/src/transfer/: ble.rs  blob.rs  commands.rs  frame.rs  lan.rs  message.rs  mod.rs
src/lib/: detectFormat.test.ts  detectFormat.ts  kanban.test.ts  kanban.ts  tableParsers.test.ts  tableParsers.ts  tauri.test.ts  tauri.ts
src/lib/components/: ChecklistEditor.svelte  CodeEditor.svelte  ConfirmModal.svelte  IncomingTransferToast.svelte  KanbanEditor.svelte  MarkdownEditor.svelte  NewNoteModal.svelte  PasswordModal.svelte  QrScanModal.svelte  QrShowModal.svelte  Sidebar.svelte  TableEditor.svelte  TableImportModal.svelte  TextEditor.svelte  TransferModal.svelte
src/lib/stores/: notes.test.ts  notes.ts  sidebar.ts  theme.ts
src/routes/: +layout.svelte  +page.svelte
(+3 files in other folders)
