[package]
name = "panote"
version = "0.1.0"
description = "Secure offline-first note-taking app with LAN/BLE transfer"
authors = []
edition = "2021"

[lib]
name = "panote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# Encryption
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"

# LAN transfer
mdns-sd = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rcgen = "0.13"

# Bluetooth
btleplug = "0.11"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
